--- a/styles.css
+++ b/styles.css
@@ -2,124 +2,7 @@
     box-sizing: border-box;
 }
 
-body main {
-    margin: 0;
+body {
+    margin: 0px;
     height: 100vh;
-    background-color: #ECF2F8;
-    font-family: "Manrope";
-    display: grid;
-    place-items: center;
-}
- 
-.flex-card {
-    width: 90%;
-    margin: 0 auto;
-    background-color: #FFF;
-    border-radius: 10;
-}
-
-.drawers {
-    width: 100%;
-    max-height: 200px;
-    object-fit: cover;
-    overflow: hidden;
-    border-radius: 10px 10px 0 0;
-}
-
-.container {
-    padding: 5% 10%;
-}
-
-.main-text {
-    margin: 0.75rem 0;
-    font-weight: 700;
-    font-size: 1rem;
-    line-height: 1.5rem;
-    letter-spacing: 0.2px;
-    color: #48556A;
-}
-
-.text {
-    color: #6E8098;
-    font-size: 0.8125rem;
-    font-weight: 500;
-    margin: 0;
-}
-
-.flex-container {
-    margin: 0;
-    padding: 3% 10% 5% 10%;
-    border-radius: 0 0 10px 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.info-left {
-    display: flex;
-}
-
-.head {
-    border-radius: 1000px;
-    max-width: 2.5rem;
-    max-height: 2.5rem;
-    width: 100%;
-    margin-right: 1rem;
-}
-
-.name {
-    margin: 0;
-    margin-bottom: 0.25rem;
-    color: #48556A;
-    font-weight: 700;
-    font-size: 0.8125rem;
-    letter-spacing: 0.12px;
-}
-
-.date {
-    margin: 0;
-    color: #9DAEC2;
-    font-size: 0.8125rem;
-    font-weight: 500;
-    letter-spacing: 0.12px;
-}
-
-.share-icon-circle {
-    background-color: #6E8098;
-    border-radius: 1000px;
-    width: 2rem;
-    height: 2rem;
-    display: grid;
-    place-items: center;
-}
-
-.sns-container {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-}
-
-.share-text {
-    color: #9DAEC2;
-    font-size: 0.8125rem;
-    letter-spacing: 5px;
-    font-weight: 500;
-}
-
-.color--blue {
-    background-color: #48556A;
-}
-
-.visible--hidden {
-    display: none;
-}
-
-.btn-color {
-    background-color: #ECF2F8;
-}
-
-@media (min-width: 730px){
-    .flex-card {
-        display: flex;
-    }
 }
