--- a/styles.css
+++ b/styles.css
@@ -145,6 +145,12 @@ body, main{
 }
 
 @media (min-width: 780px){
+
+    main {
+        display: grid;
+        place-content: center;
+    }
+
     .card-flex {
         display: flex;
         width: 70%;
